--- a/FibasteOy/package.json
+++ b/FibasteOy/package.json
@@ -15,15 +15,14 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@clerk/clerk-expo": "^1.1.0",
+    "@clerk/clerk-expo": "^1.1.2",
     "@expo/vector-icons": "^14.0.0",
     "@react-navigation/native": "^6.0.2",
-    "expo": "~51.0.4",
+    "expo": "~51.0.6",
     "expo-auth-session": "^5.5.2",
     "expo-constants": "~16.0.1",
     "expo-font": "~12.0.4",
     "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.12",
     "expo-secure-store": "~13.0.1",
     "expo-splash-screen": "~0.27.4",
     "expo-status-bar": "~1.12.1",
@@ -33,7 +32,6 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.1",
     "react-native-gesture-handler": "~2.16.1",
-    "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10"
@@ -43,8 +41,11 @@
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
     "@types/react-test-renderer": "^18.0.7",
+    "babel-preset-expo": "^11.0.6",
+    "expo-router": "~3.5.14",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.1",
+    "react-native-reanimated": "~3.10.1",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
   },
