--- a/FibasteOy/package.json
+++ b/FibasteOy/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@clerk/clerk-expo": "^1.1.2",
     "@expo/vector-icons": "^14.0.0",
+    "@react-native-picker/picker": "2.7.5",
     "@react-navigation/native": "^6.0.2",
     "expo": "~51.0.8",
     "expo-auth-session": "^5.5.2",
@@ -32,6 +33,8 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.1",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-image-crop-picker": "^0.41.1",
+    "react-native-image-picker": "^7.1.2",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10"
