added a take image functionality. Deleted some extra files. Added also a resetImage logic with the help of icons.

--- a/FibasteOy/app.json
+++ b/FibasteOy/app.json
@@ -30,7 +30,8 @@
       [
         "expo-image-picker",
         {
-          "photosPermission": "The app accesses your photos to let you share them with your friends."
+          "photosPermission": "The app needs access to your photos to add them for tasks posts.",
+          "cameraPermission": "The app needs access to use camera to take images for tasks posts. "
         }
       ],
       "expo-router",
