--- a/FibasteOy/package.json
+++ b/FibasteOy/package.json
@@ -23,7 +23,9 @@
     "expo-auth-session": "^5.5.2",
     "expo-constants": "~16.0.1",
     "expo-font": "~12.0.4",
+    "expo-image-picker": "~15.0.5",
     "expo-linking": "~6.3.1",
+    "expo-location": "~17.0.1",
     "expo-secure-store": "~13.0.1",
     "expo-splash-screen": "~0.27.4",
     "expo-status-bar": "~1.12.1",
@@ -35,12 +37,11 @@
     "react-native-gesture-handler": "~2.16.1",
     "react-native-image-crop-picker": "^0.41.1",
     "react-native-image-picker": "^7.1.2",
+    "react-native-maps": "1.14.0",
+    "react-native-radio-buttons-group": "^3.1.0",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10",
-    "expo-image-picker": "~15.0.5",
-    "react-native-maps": "1.14.0",
-    "expo-location": "~17.0.1"
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
