started with the AWS amplify and started to build up the Development build also.

--- a/FibasteOy/app.json
+++ b/FibasteOy/app.json
@@ -19,7 +19,13 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "permissions": [
+        "android.permission.RECORD_AUDIO",
+        "android.permission.ACCESS_COARSE_LOCATION",
+        "android.permission.ACCESS_FINE_LOCATION"
+      ],
+      "package": "com.kallehahtela.FibasteOy"
     },
     "web": {
       "bundler": "metro",
