--- a/FibasteOy/package.json
+++ b/FibasteOy/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint"
@@ -19,6 +19,7 @@
     "@expo/vector-icons": "^14.0.0",
     "@react-native-picker/picker": "2.7.5",
     "@react-navigation/native": "^6.0.2",
+    "aws-amplify": "^6.3.4",
     "expo": "~51.0.8",
     "expo-auth-session": "^5.5.2",
     "expo-constants": "~16.0.1",
