--- a/FibasteOy/package.json
+++ b/FibasteOy/package.json
@@ -18,11 +18,11 @@
     "@clerk/clerk-expo": "^1.1.2",
     "@expo/vector-icons": "^14.0.0",
     "@react-native-picker/picker": "2.7.5",
+    "@react-native/metro-config": "^0.74.83",
     "@react-navigation/native": "^6.0.2",
-    "aws-amplify": "^6.3.4",
-    "expo": "~51.0.8",
+    "expo": "~51.0.9",
     "expo-auth-session": "^5.5.2",
-    "expo-constants": "~16.0.1",
+    "expo-constants": "~16.0.2",
     "expo-font": "~12.0.4",
     "expo-image-picker": "~15.0.5",
     "expo-linking": "~6.3.1",
@@ -32,6 +32,7 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.4",
     "expo-web-browser": "~13.0.3",
+    "lottie-react-native": "6.7.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.1",
@@ -42,7 +43,8 @@
     "react-native-radio-buttons-group": "^3.1.0",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "react-native-reanimated": "~3.10.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
