--- a/FibasteOy/package.json
+++ b/FibasteOy/package.json
@@ -40,11 +40,12 @@
     "react-native-image-crop-picker": "^0.41.1",
     "react-native-image-picker": "^7.1.2",
     "react-native-maps": "1.14.0",
+    "react-native-markdown-display": "^7.0.2",
     "react-native-radio-buttons-group": "^3.1.0",
+    "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10",
-    "react-native-reanimated": "~3.10.1"
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
