--- a/FibasteOy/.gitignore
+++ b/FibasteOy/.gitignore
@@ -43,3 +43,8 @@ amplifytools.xcconfig
 .secret-*
 **.sample
 #amplify-do-not-edit-end
+
+# amplify
+.amplify
+amplify_outputs*
+amplifyconfiguration*
