--- a/FibasteOy/package.json
+++ b/FibasteOy/package.json
@@ -20,6 +20,7 @@
     "@react-native-picker/picker": "2.7.5",
     "@react-native/metro-config": "^0.74.83",
     "@react-navigation/native": "^6.0.2",
+    "aws-amplify": "^6.3.4",
     "expo": "~51.0.9",
     "expo-auth-session": "^5.5.2",
     "expo-constants": "~16.0.2",
@@ -48,17 +49,24 @@
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
+    "@aws-amplify/backend": "^1.0.2",
+    "@aws-amplify/backend-cli": "^1.0.3",
     "@babel/core": "^7.20.0",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
     "@types/react-test-renderer": "^18.0.7",
+    "aws-cdk": "^2.143.1",
+    "aws-cdk-lib": "^2.143.1",
     "babel-preset-expo": "^11.0.6",
+    "constructs": "^10.3.0",
+    "esbuild": "^0.21.4",
     "expo-router": "~3.5.14",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.2",
     "react-native-reanimated": "~3.10.1",
     "react-test-renderer": "18.2.0",
-    "typescript": "~5.3.3"
+    "tsx": "^4.11.0",
+    "typescript": "^5.4.5"
   },
   "private": true
 }
